--- a/src/app/foot/foot.component.html
+++ b/src/app/foot/foot.component.html
@@ -1,3 +1,5 @@
-<footer class="page-footer bg-black text-center text-white-50">
-    Copyright &copy; Joy Guru Sri Sri Ashok Kumar Mukhapadhyay Sevakendra Trust
+<footer style="background-color: #454545;" class="page-footer font-small blue fixed-bottom">
+    <div class="footer-copyright text-center text-white py-3">© Copyright :
+        <a style="color: orange;" [routerLink]="['/home']"> Joy Guru Sri Sri Ashok Kumar Mukhapadhyay Sevakendra Trust</a>
+    </div>
 </footer>
