Made About operational

--- a/src/app/foot/foot.component.html
+++ b/src/app/foot/foot.component.html
@@ -1,5 +1,5 @@
-<footer style="background-color: #454545;" class="page-footer font-small blue fixed-bottom">
-    <div class="footer-copyright text-center text-white py-3">© Copyright :
+<footer style="background-color: #454545;" class="row page-footer font-small blue fixed-bottom">
+    <div style="font-size: small;" class="footer-copyright text-center text-white py-3 container-fluid">© Copyright :
         <a style="color: orange;" [routerLink]="['/home']"> Joy Guru Sri Sri Ashok Kumar Mukhapadhyay Sevakendra Trust</a>
     </div>
 </footer>
