--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,5 +1,5 @@
-<nav style="background-color: orange;" class="navbar navbar-default navbar-expand-md fixed-top" id="mainNav">
-    <a class="navbar-brand"  [routerLink]="['/home']">Joy Thakur</a>
+<nav style="background-color: orange;" class="row navbar navbar-default navbar-expand-md fixed-top" id="mainNav">
+    <a class="navbar-brand" style="margin-left: 10px;" [routerLink]="['/home']">Joy Thakur</a>
     <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav">
             <li class="nav-item">
