--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,9 @@
-<p>about works!</p>
+<div class="row container-fluid" style="padding-left: 50px; text-align: justify;">
+    <h2 style="margin-top: 100px;" class="col-md-10 offset-md-1">{{about.header}}</h2>
+</div>
+<div class="row container-fluid" style="padding-left: 50px; text-align: justify;" *ngFor="let b of about.paragraphs;let i=index">
+    <div class="col-md-10 offset-md-1">
+        <h4>{{b.header}}</h4>
+        <div [innerHTML]="b.body"></div>
+    </div>
+</div>
