--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -47,7 +47,7 @@
     <div class="col-md-5 col-xs-10 col-sm-10">
       <h3>Address</h3>
       <p>
-        Joy guru Sree Sree Ashok Kumar Mukhopadhyay Sevakendra
+        Joy guru Sri Sri Ashok Kumar Mukhopadhyay Sevakendra
         Religious & Charitable Trust
         Devoted to Sri Sri Ashok Kumar Mukhopadhyay
       </p>
@@ -60,7 +60,9 @@
       <p><fa-icon [icon]="faMobile"></fa-icon>&nbsp;<a href="tel:+91 98048 23652">+91 98048 23652</a>, <a href="tel:+91 94330 12740">+91 94330 12740</a></p>
 
       <h3>Locate Us</h3>
-      <div class="card"><iframe class="container-fluid card-body" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.1732745786057!2d88.33414061479566!3d22.758949985087224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89ad974bad5e7%3A0xc32f48908eedecd5!2sJoy%20Guru%20Sri%20Sri%20Ashok%20Kumar%20Mukhopadhyay%20Sevakendra%20Trust!5e0!3m2!1sen!2sin!4v1586108974709!5m2!1sen!2sin" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+      <div class="card"><iframe class="container-fluid card-body" 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.1732745786057!2d88.33414061479566!3d22.758949985087224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89ad974bad5e7%3A0xc32f48908eedecd5!2sJoy%20Guru%20Sri%20Sri%20Ashok%20Kumar%20Mukhopadhyay%20Sevakendra%20Trust!5e0!3m2!1sen!2sin!4v1586108974709!5m2!1sen!2sin"
+         frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
     
     </div>
 </div>
