--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,26 +1,32 @@
-<nav style="background-color: orange;" class="row navbar navbar-default navbar-expand-md fixed-top" id="mainNav">
+<nav style="background-color: orange;" class="navbar navbar-expand-md navbar-dark fixed-top" id="mainNav">
     <a class="navbar-brand" style="margin-left: 10px;" [routerLink]="['/home']">Joy Thakur</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+        <span class="navbar-toggler-icon text-light"></span>
+    </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/about']">About</a>
+                <a class="nav-link text-light" [routerLink]="['/about']">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" [routerLink]="['/blogs']" >Blogs</a>
+              <a class="nav-link text-light" [routerLink]="['/blogs']" >Blogs</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/events']" >Events</a>
+                <a class="nav-link text-light" [routerLink]="['/events']" >Events</a>
             </li>
         </ul>
+        
     </div>
-    <div class="navbar-right">
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+    <div class="navbar-right ml-auto">
         <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" [routerLink]="['/contactus']">Contact Us</a>
+              <a class="nav-link text-light" [routerLink]="['/contactus']">Contact Us</a>
             </li>
      
         </ul>
     </div>
+</div>
 </nav>
         
     
