--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -20,7 +20,7 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
     <div class="navbar-right ml-auto">
         <ul class="navbar-nav">
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link text-light" [routerLink]="['/contactus']">Contact Us</a>
             </li>
      
