--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,6 +5,7 @@
 <div class="row container-fluid" style="padding-left: 50px; text-align: justify;" *ngFor="let b of about.paragraphs;let i=index">
     <div class="col-md-10 offset-md-1">
         <h4>{{b.header}}</h4>
+        <img [src]="b.imgUrl" *ngIf="b.imgUrl" class="img img-fluid rounded" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
         <div [innerHTML]="b.body"></div>
     </div>
 </div>
