--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <jgssakmt-nav></jgssakmt-nav>
-<router-outlet></router-outlet>
+<div class="row">
+<div class="col-md-8">
+    <router-outlet></router-outlet>
+</div>
+<div class="col-md-4">
+    <app-side-panel></app-side-panel>
+</div>
+</div>
 <jgssakmt-foot></jgssakmt-foot>
