--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,1 +1,17 @@
-<p>events works!</p>
+<div class="container-fluid">
+    <div class="card-deck" style="margin-top: 100px; margin-bottom: 100px;">
+        <div class="col-md-5 offset-md-1" *ngFor="let e of upComing">
+            <div class="card" style="width: auto; margin: 0 auto;  margin-top: 10px; margin-bottom: 10px;">
+                <img *ngIf="e.imgUrl" class="card-img-top" [src]="e.imgUrl" [alt]="e.name">
+                <div class="card-body">
+                  <h3 class="card-title">{{e.name}}</h3>
+                  <p class="card-text">{{e.excerpt}}</p>
+                  <button (click)="link(e.eventId)" class="btn btn-primary">Read More</button>
+                </div>
+                <div class="card-footer">
+                    From {{e.startTime | eventDate}} to {{e.endTime | eventDate}}
+                </div>
+              </div>
+        </div>
+    </div>
+</div>
