Fixed Side panel

--- a/src/app/blogs/blogs.component.html
+++ b/src/app/blogs/blogs.component.html
@@ -2,14 +2,14 @@
 <div class="card-deck" style="margin-top: 100px; margin-bottom: 100px;">
     <div class="col-md-5 offset-md-1" *ngFor="let b of blogs">
         <div class="card" style="width: auto; margin: 0 auto;  margin-top: 10px; margin-bottom: 10px;">
-            <img class="card-img-top" [src]="b.imgUrl" [alt]="b.title">
+            <img class="card-img-top" [src]="b.imgUrl" [alt]="b.title" *ngIf="b.imgUrl">
             <div class="card-body">
               <h3 class="card-title">{{b.title}}</h3>
               <p class="card-text">{{b.excerpt}}</p>
               <button (click)="link(b.blogId)" class="btn btn-primary">Read More</button>
             </div>
             <div class="card-footer">
-                Posted : {{b.posted}} 
+                Posted : {{b.posted | date}} 
             </div>
           </div>
     </div>
