--- a/src/app/side-panel/side-panel.component.html
+++ b/src/app/side-panel/side-panel.component.html
@@ -1,6 +1,6 @@
-<div class="container" style="margin-bottom: 100px; margin-top: 100px; position: fixed;">
-  <div class="col-md-10">
-    <div class="card-column">
+<div class="container" >
+  <div class="col-md-10" >
+    <div class="card-column" style="margin-bottom: 50px; margin-top: 60px;top: 0; bottom: 0; position: fixed; overflow-y: scroll;">
       <div class="card border-primary mb-3">
         <div class="card-header bg-primary text-light">Donation</div>
         <div class="card-body">
