Added home page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<jgssakmt-nav></jgssakmt-nav>
+<div class="row">
+    <jgssakmt-nav></jgssakmt-nav>
+</div>
 <div class="row">
 <div class="col-md-8">
     <router-outlet></router-outlet>
@@ -7,4 +9,6 @@
     <app-side-panel></app-side-panel>
 </div>
 </div>
-<jgssakmt-foot></jgssakmt-foot>
+<div class="row">
+    <jgssakmt-foot></jgssakmt-foot>
+</div>
