Fixed some margin issues

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,5 @@
-<div class="row container-fluid" style="padding-left: 50px; text-align: justify;"> 
-    <h2 style="margin-top: 100px;" class="col-md-10 offset-md-1">{{about.header}}</h2>
+<div class="row container-fluid" style="margin-top: 10%; padding-left: 50px; text-align: justify;"> 
+    <h2 class="col-md-10 offset-md-1">{{about.header}}</h2>
 </div>
 <div style="margin-bottom: 100px;">
 <div class="row container-fluid" style="padding-left: 50px; text-align: justify;" *ngFor="let b of about.paragraphs;let i=index">
