--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="card-deck" style="margin-top: 100px; margin-bottom: 100px;">
+    <div class="card-deck" style="margin-top: 10%; margin-bottom: 10%;">
         <div class="col-md-5 offset-md-1" *ngFor="let e of upComing">
             <div class="card" style="width: auto; margin: 0 auto;  margin-top: 10px; margin-bottom: 10px;">
                 <img *ngIf="e.imgUrl" class="card-img-top" [src]="e.imgUrl" [alt]="e.name">
