--- a/src/app/side-panel/side-panel.component.html
+++ b/src/app/side-panel/side-panel.component.html
@@ -1,6 +1,6 @@
-<div class="container" >
-  <div class="col-md-10 col-sm-4" >
-    <div class="card-column" style="margin-bottom: 5%; margin-top: 5%; top: 0; bottom: 0; position: fixed; overflow-y: scroll;">
+<div class="container-fluid" style="margin-bottom: 10%; margin-top: 20%;">
+  <div class="col-md-10" >
+    <div class="card-column"><!-- top: 0; bottom: 0; position: fixed; overflow-y: scroll;-->
       <div class="card border-primary mb-3">
         <div class="card-header bg-primary text-light">Donation</div>
         <div class="card-body">
