--- a/src/app/blogs/blogs.component.html
+++ b/src/app/blogs/blogs.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-<div class="card-deck" style="margin-top: 100px; margin-bottom: 100px;">
+<div class="card-deck" style="margin: 10% 10%">
     <div class="col-md-5 offset-md-1" *ngFor="let b of blogs">
         <div class="card" style="width: auto; margin: 0 auto;  margin-top: 10px; margin-bottom: 10px;">
             <img class="card-img-top" [src]="b.imgUrl" [alt]="b.title" *ngIf="b.imgUrl">
