--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -1,4 +1,5 @@
-<div class="row vertical-center">
+<div class="container-fluid">
+  <div class="row vertical-center">
     <div class="col-md-5 offset-md-1 col-xs-10 offset-xs-1 col-sm-10 offset-sm-1">
       <div class="card">
         <div class="card-header bg-dark">
@@ -39,7 +40,7 @@
             <span class="text-danger">{{errorMessage}}</span>
           </div>
           <div *ngIf="successMessage!=null">
-            <span class="text-success">{{successMessage}}</span>
+            <span class="text-success">Message sent successfully</span>
           </div>
         </div>
       </div>
@@ -63,7 +64,7 @@
       <div class="card"><iframe class="container-fluid card-body" 
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.1732745786057!2d88.33414061479566!3d22.758949985087224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89ad974bad5e7%3A0xc32f48908eedecd5!2sJoy%20Guru%20Sri%20Sri%20Ashok%20Kumar%20Mukhopadhyay%20Sevakendra%20Trust!5e0!3m2!1sen!2sin!4v1586108974709!5m2!1sen!2sin"
          frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
-    
+        </div>
     </div>
 </div>
   
