--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+    <div class="row">
     <div class="card-deck" style="margin-top: 10%; margin-bottom: 10%;">
         <div class="col-md-5 offset-md-1" *ngFor="let e of upComing">
             <div class="card" style="width: auto; margin: 0 auto;  margin-top: 10px; margin-bottom: 10px;">
@@ -14,4 +15,5 @@
               </div>
         </div>
     </div>
+</div>
 </div>
