Fixed app component and added main title

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,16 @@
-<div class="row">
-    <jgssakmt-nav></jgssakmt-nav>
-</div>
-<div class="row">
-<div class="col-md-8">
-    <router-outlet></router-outlet>
-</div>
-<div class="col-md-4">
-    <app-side-panel></app-side-panel>
-</div>
-</div>
-<div class="row">
-    <jgssakmt-foot></jgssakmt-foot>
+<div class="container-fluid">
+    <div class="row">
+        <jgssakmt-nav></jgssakmt-nav>
+    </div>
+    <div class="row">
+    <div class="col-md-8">
+        <router-outlet></router-outlet>
+    </div>
+    <div class="col-md-4">
+        <app-side-panel></app-side-panel>
+    </div>
+    </div>
+    <div class="row">
+        <jgssakmt-foot></jgssakmt-foot>
+    </div>
 </div>
