Fixed ui componenet and made components sticky

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="row" style="margin-top: 10%; padding-left: 50px; text-align: justify;"> 
+    <div class="row mt-5 mb-5" style="padding-left: 50px; text-align: justify;"> 
         <h2 class="col-md-10 offset-md-1">{{about.header}}</h2>
     </div>
     <div style="margin-bottom: 100px;">
