--- a/src/app/view-event/view-event.component.html
+++ b/src/app/view-event/view-event.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
-    <div class="row">
+    <div class="row mt-5 mb-5">
         <div class="col-md-10 offset-md-1">
-            <div style="margin-top: 100px; margin-bottom: 100px; text-align: justify;">
+            <div style="text-align: justify;">
                 <div>
                     <h2>{{event.name}}</h2>
                 </div>
