--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <div class="row vertical-center">
+  <div class="row vertical-center mt-5 mb-5">
     <div class="col-md-5 offset-md-1 col-xs-10 offset-xs-1 col-sm-10 offset-sm-1">
       <div class="card">
         <div class="card-header bg-dark">
