--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid" style="margin-top: 10%; margin-bottom: 10%;">
-    <div class="row">
+<div class="container-fluid">
+    <div class="row mt-5 mb-5">
         <div class="col-md-11 offset-md-1">
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
