--- a/src/app/side-panel/side-panel.component.html
+++ b/src/app/side-panel/side-panel.component.html
@@ -1,6 +1,6 @@
-<div class="container-fluid" style="margin-bottom: 10%; margin-top: 20%;">
-  <div class="col-md-10" >
-    <div class="card-column"><!-- top: 0; bottom: 0; position: fixed; overflow-y: scroll;-->
+<div class="container-fluid">
+  <div class="col-md-10 mt-5 mb-5" >
+    <div class="card-column">
       <div class="card border-primary mb-3">
         <div class="card-header bg-primary text-light">Donation</div>
         <div class="card-body">
@@ -13,7 +13,7 @@
         <div class="card-header bg-dark"><a  class="text-light" [routerLink]="['/blogs']">Recent Blogs</a></div>
         <div class="card-body">
             <ul *ngFor="let b of blogs; let i=index" class="list">
-                <li *ngIf="i<5"><a class="text-dark" [href]="['/blogs/'+b.blogId]">{{b.title}}</a></li>
+                <li *ngIf="i<5"><a class="text-dark" [routerLink]="[]" (click)="blogsClicked(b.blogId)">{{b.title}}</a></li>
             </ul>
         </div>
       </div>
@@ -22,7 +22,7 @@
         <div class="card-header bg-dark"><a  class="text-light" [routerLink]="['/events']">Upcoming Events</a></div>
         <div class="card-body">
             <ul *ngFor="let e of upComingEvents; let i=index" class="list">
-                <li *ngIf="i<5"><a class="text-dark" [href]="['/events/'+ e.eventId]">{{e.name}}</a></li>
+                <li *ngIf="i<5"><a class="text-dark" [routerLink]="[]" (click)="eventsClicked(e.eventId)">{{e.name}}</a></li>
             </ul>
         </div>
       </div>
@@ -31,7 +31,7 @@
         <div class="card-header bg-dark"><a  class="text-light" [routerLink]="['/events']">Past Events</a></div>
         <div class="card-body">
             <ul *ngFor="let e of pastEvents; let i=index" class="list">
-                <li *ngIf="i<5"><a class="text-dark" [href]="['/events/'+ e.eventId]">{{e.name}}</a></li>
+                <li *ngIf="i<5"><a class="text-dark" [routerLink]="[]" (click)="eventsClicked(e.eventId)">{{e.name}}</a></li>
             </ul>
         </div>
       </div>
